--- CHANGELOG ---

--- PyFMI-2.7.3 ---
    * Fixed pickling of the OptionsBase class
    * Enabled support for serialize/de-serialization of FMU state

--- PyFMI-2.7.2 ---
    * Corrected version number.

--- PyFMI-2.7.1 ---
    * Fixed so that free/terminate methods are called correctly

--- PyFMI-2.7 ---
    * Fixed logging messages being printed to the console during 
      instantiation for FMI 1.0
    * Minor encoding issues fixed when retrieving declared types

--- PyFMI-2.6.1 ---
    * Minor fix in handling bytes/str in Python 3

--- PyFMI-2.6 ---
    * Fixed issue with log messages during the FMI methods terminate /
      free instance.
    * Removed caching on the get_variable_nominal method
    * Added a logging module (for parsing XML based FMU logs)
    * Fixed issue with the estimation of directional derivatives when
      the number of outputs was less than the number of states
    * Performance improvements
    * Fixed minor issue when storing the result (https://github.com/modelon-community/PyFMI/issues/21)
    * Added a 'silent' option to the CS simulation options.

--- PyFMI-2.5.7 ---
    * Fixed minor issue in plot GUI for compliance with Python 3.

--- PyFMI-2.5.6 ---
    * Fixed such that instance attributes 'name' and 'raw_name' in class ResultDymolaBinary
      are now attributes that consists of strings instead of bytes in Python 3.
    * Fixed issue with set_string when input was a list of strings in Python 3.
    * Methods _get_types_platform and get_version now returns data of type string 
      instead of bytes with Python 3.
    * Fixed other bytes/string incompabilities that caused exceptions with
      Python 3.

--- PyFMI-2.5.5 ---
    * Changed default value of maxh to be computed based on ncp, start
      and stop time according to, maxh=(stop-start)/ncp (ticket:5858)
    * Changed default ncp value from '0' to '500' (ticket:5857)
    * Changed default value for the sparse solver in CVode (if the